re-rename to NCPi

--- a/activate/CSS.css
+++ b/activate/CSS.css
@@ -1,5 +1,5 @@
 /* 
- * NextcloudPlus Web Panel style sheets. Based on official Nextcloud 12 datasheets
+ * NextCloudPi Web Panel style sheets. Based on official Nextcloud 12 datasheets
  *
  * Copyleft 2018 by Ignacio Nunez Hernanz <nacho _a_t_ ownyourbits _d_o_t_ com>
  * GPL licensed (see end of file) * Use at your own risk!
