--- a/ncp.css
+++ b/ncp.css
@@ -1,5 +1,5 @@
 /* 
- * NextcloudPlus Web Panel style sheets. Based on official Nextcloud 12 datasheets
+ * NextCloudPi Web Panel style sheets. Based on official Nextcloud 12 datasheets
  *
  * Copyleft 2017 by Ignacio Nunez Hernanz <nacho _a_t_ ownyourbits _d_o_t_ com>
  * GPL licensed (see end of file) * Use at your own risk!
@@ -389,7 +389,7 @@ input[type='checkbox'].checkbox--white:indeterminate:disabled + label:after,inpu
  padding-right:20px
 }
 
-#nextcloudplus {
+#nextcloudpi {
  padding:5px;
  padding-bottom:0;
  height:45px;
@@ -397,11 +397,11 @@ input[type='checkbox'].checkbox--white:indeterminate:disabled + label:after,inpu
  -ms-filter:'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
  opacity:1
 }
-#nextcloudplus:focus {
+#nextcloudpi:focus {
  -ms-filter:'progid:DXImageTransform.Microsoft.Alpha(Opacity=75)';
  opacity:0.75
 }
-#nextcloudplus:hover,#nextcloudplus:active {
+#nextcloudpi:hover,#nextcloudpi:active {
  -ms-filter:'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
  opacity:1
 }
