--- a/css/ncp.css
+++ b/css/ncp.css
@@ -233,7 +233,7 @@ select {
  -webkit-appearance:none;
  -moz-appearance:none;
  appearance:none;
- background:url('../../../core/css/../img/actions/triangle-s.svg') no-repeat right 4px center;
+ #background:url('../../../core/css/../img/actions/triangle-s.svg') no-repeat right 4px center;
  background-color:inherit;
  outline:0;
  padding-right:24px !important
@@ -410,7 +410,7 @@ input[type='checkbox'].checkbox--white:indeterminate:disabled + label:after,inpu
 }
 
 #header .logo {
- background-image:url("logo.svg");
+ background-image:url("../img/logo.svg");
  background-repeat:no-repeat;
  background-size:175px;
  background-position:center;
@@ -425,7 +425,7 @@ input[type='checkbox'].checkbox--white:indeterminate:disabled + label:after,inpu
 }
 #header .logo-icon {
  display:inline-block;
- background-image:url('img/ncp-logo.svg');
+ background-image:url('../img/ncp-logo.svg');
  background-repeat:no-repeat;
  background-position:center center;
  background-size:contain;
@@ -599,7 +599,7 @@ kbd {
  overflow:auto;
  box-sizing:border-box
 }
-#app-navigation > ul > li:focus,#app-navigation > ul > li:hover,#app-navigation > ul > li.active,#app-navigation > ul > li a.selected,#app-navigation > ul > li:focus > a,#app-navigation > ul > li:hover > a,#app-navigation > ul > li.active > a,#app-navigation > ul > li a.selected > a {
+#app-navigation > ul > li:focus,#app-navigation ul:hover,#app-navigation ul.active,#app-navigation > ul > li a.selected,#app-navigation > ul > li:focus > a,#app-navigation > ul > li:hover > a,#app-navigation > ul > li.active > a,#app-navigation > ul > li a.selected > a {
  opacity:1;
  box-shadow:inset 2px 0 #0082c9
 }
@@ -626,7 +626,7 @@ kbd {
  background-position:14px center;
  background-repeat:no-repeat
 }
-#app-navigation li > a {
+#app-navigation li > span, #app-navigation ul {
  display:block;
  width:90%;
  line-height:44px;
@@ -637,7 +637,19 @@ kbd {
  white-space:nowrap;
  text-overflow:ellipsis;
  color:#000;
- opacity:0.57
+ opacity:0.57;
+ font-weight: normal;
+}
+#app-navigation li > span {
+ font-weight: bold;
+ background-image:url('../img/files.svg');
+ background-size: 16px 16px;
+ background-position: 10px center;
+ background-repeat: no-repeat;
+ padding: 0px 12px 0px 36px;
+}
+#app-navigation ul {
+  padding-left: 2em;
 }
 #app-navigation li > a:first-child img {
  margin-bottom:-3px;
@@ -655,7 +667,7 @@ kbd {
  margin:0;
  padding:0;
  background:none;
- background-image:url('../../../core/css/../img/actions/triangle-s.svg?v=1');
+#background-image:url('../../../core/css/../img/actions/triangle-s.svg?v=1');
  background-size:16px;
  background-repeat:no-repeat;
  background-position:center;
@@ -685,10 +697,11 @@ kbd {
  -ms-transform:rotate(0);
  transform:rotate(0)
 }
-#app-navigation > {
+#app-navigation {
+ overflow-y: scroll
 }
 #app-navigation > ul ul {
- display:none
+ /* display:none */
 }
 #app-navigation > ul ul li > a {
  padding-left:32px
@@ -832,6 +845,7 @@ kbd {
  border-left:0;
  margin-right:0
 }
+
 #app-content {
  position:relative;
  height:100%;
@@ -1058,7 +1072,7 @@ select {
   width: 100%;
 }
 
-#loading-gif {
+.loading-gif {
   display: none;
 }
 
@@ -1073,23 +1087,23 @@ select {
   text-align: center;
 }
 
-#config-box-info-txt {
+.config-box-info-txt {
   white-space: pre-wrap;
   text-align: center;
 }
 
-#config-button-wrapper {
+.config-button-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .icon-close {
- background-image:url('img/close.svg')
+ background-image:url('../img/close.svg')
 }
 
 .icon-menu {
-  background-image: url('img/menu.svg');
+  background-image: url('../img/menu.svg');
 }
 
 #power {
@@ -1117,43 +1131,43 @@ select {
 }
 
 .icon-power-white {
-  background-image: url('img/poweroff.svg');
+  background-image: url('../img/poweroff.svg');
 }
 .icon-nc-white {
-  background-image: url('img/nc-button.svg');
+  background-image: url('../img/nc-button.svg');
 }
 .icon-nc-info {
-  background-image: url('img/info-white.svg');
+  background-image: url('../img/info-white.svg');
 }
 .icon-config {
-  background-image: url('img/settings-white.svg');
+  background-image: url('../img/settings-white.svg');
 }
 .icon-reboot-white {
-  background-image: url('img/reboot.svg');
+  background-image: url('../img/reboot.svg');
 }
 .icon-dashboard {
-  background-image: url('img/dashboard.svg');
+  background-image: url('../img/dashboard.svg');
 }
 
 .icon-wizard-white {
-  background-image: url('img/wizard.svg');
+  background-image: url('../img/wizard.svg');
 }
 .icon-red-circle {
-  background-image: url('img/red-circle.svg');
+  background-image: url('../img/red-circle.svg');
   padding: 8px;
   display: none;
 }
 
 .icon-green-circle {
-  background-image: url('img/green-circle.svg');
+  background-image: url('../img/green-circle.svg');
   padding: 8px;
 }
 
 .icon-info {
-  background-image: url('img/info.svg');
-  padding: 8px;
-  float: right;
-  display: none;
+  background-image: url('../img/info.svg');
+  position: absolute;
+  top: 5px;
+  right: 1em;
 }
 
 #expand #expandDisplayName {
@@ -1230,7 +1244,7 @@ a#versionlink:hover {
   right: 5px;
   display: block;
   background: none;
-  background-image:url('img/view-close.svg');
+  background-image:url('../img/view-close.svg');
   width: 38px;
   height: 19px;
   text-indent: -9999px;
@@ -1311,7 +1325,7 @@ a#versionlink:hover {
  overflow:hidden
 }
 
-#details-box {
+.details-box {
   background-color: #fbfbfb;
   border: solid 1px lightgray;
   color: #565656;
